# croof

./: .gitignore  Cargo.toml  Makefile  README.md  ds.h  flake.nix  main.c  string.croof  test.croof
examples/: 01_add.croof  02_bool.croof  02_boolean.croof  03_conditions.croof  03_math.croof  04_fib.croof  05_int.croof  05_overload.croof  06_func.croof  06_int.croof  07_func.croof  08_expr.croof  stdlib.croof
examples/stdlib/: natural.croof
lib/: boolean.croof  math.croof  stdlib.croof
resources/: croof.vim
src/: ast.rs  ds.c  ds.h  lexer.c  lexer.h  lexer.rs  lib.rs  main.c  main.rs  matcher.rs  parser.c  parser.h  parser.rs  solver.c  solver.h  solver.rs  source_file.rs  source_map.rs  token.rs  typechecker.rs  util.rs
src/solver/: astar.rs  interactive.rs  mod.rs
tests/01-lexer/: 01-number.ref  02-string.ref  03-tokens.croof  03-tokens.ref  04-greater.ref
tests/02-parser/: 01-define.croof  01-define.ref  02-implication.croof  02-implication.ref  03-greater.croof  03-greater.ref
tests/03-typecheck/: 01-literal.croof  01-literal.ref  02-equal.croof  02-equal.ref  03-function.croof  03-function.ref  04-operator.croof  04-operator.ref  05-variable.croof  05-variable.ref  06-greater.croof  06-greater.ref  07-redefined-def.croof  07-redefined-def.ref  08-redefined-let.croof  08-redefined-let.ref  09-redefined-type.croof  09-redefined-type.ref
