[package]
name = "croof"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/croof"
description = "A simple math CLI tool for solving math problems."
categories = ["math", "compiler"]

[lib]
name = "croof"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
